Added match restart y/n Match score and match length displayed at top of board